microapp-production-project/microapp/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microapp-ingress
  namespace: microapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ganga888.online
      secretName: ganga888-tls
  rules:
    - host: ganga888.online
      http:
        paths:
          - path: /service1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service1
                port:
                  number: 80
          - path: /service2(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service2
                port:
                  number: 80
          - path: /service3(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service3
                port:
                  number: 80
          - path: /service4(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service4
                port:
                  number: 80
          - path: /service5(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service5
                port:
                  number: 80
